syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateDiskParams {
    reserved 9, 10;

    uint64 BlocksCount = 1;
    types.Disk Disk = 2;
    uint32 BlockSize = 3;
    types.DiskKind Kind = 4;
    string CloudId = 5;
    string FolderId = 6;
    uint32 TabletVersion = 7;
    string PlacementGroupId = 8;
    string StoragePoolName = 11;
    repeated string AgentIds = 12;
    types.EncryptionDesc EncryptionDesc = 13;
    uint32 PlacementPartitionIndex = 14;
    bool RequireExactCellIdMatch = 15;
}
